# makair

./: .clang-format  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  medical-requirements-fr.md  platformio.ini  quick_start_guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  suggestion.md
.github/workflows/: arduino-cli.yml  control-lint.yml  firmware-docs.yml  firmware-lint.yml  firmware-release.yml  firmware-unit-tests.yml  lint.yml  platformio.yml  software-docs.yml  software-lint.yml  software-release.yml  software-unit-tests.yml  telemetry-all.yml  telemetry.yml  unit-test.yml
Overview/: Overview.sketch
cad/: Air Transistor V1.f3d
cad/Air Transistor/: Air Transistor V1.f3d  Air Transistor V2.f3d
cad/Blower/: Blower V1.f3d
cad/Oxygen Mixer/: Oxygen Mixer V1.f3d
docs/Architecture/: README.md  makair.afm  makair.aird  makair.melodymodeller
docs/French/: Medical Requirements (French).md
docs/Notes/English/: Medical Requirements (English).md
docs/Overview/: Overview.sketch
docs/Pneumatics/Pneumatic Circuit/: Pneumatic Circuit.sketch
docs/Software/: README.md  makair_architecture.mdj
docs/software/firmware/: index.html
fritzing/: ref_pososants.md  respi_V0.fzz
jobs/Formlabs Form 3/: Air Transistor Adapter 15-15 + 15-22 + V1B.form  Air Transistor Hermetic Seal.form  Air Transistor Small Parts.form  Air Transistor V2 (Everything).form
jobs/MakerBot Method/Air Transistor/: Air Transistor - Roof.print
jobs/MakerBot Method/Blower/: Blower - Propeller.print
schemes/: overview.sketch
schemes/Electronics/ProtoA/: README.md
schemes/Electronics/ProtoB/: README.md
sonarcloud/: build-and-analyse-all.sh  build.sh
sonarcloud/hw1/: build.sh  sonar-project.properties
sonarcloud/hw2/: build.sh  sonar-project.properties
src/: main.cpp
src/Electronics/ProtoB/: respi_V0.fzz
src/arduino/: .~lock.out.csv#  CPPLINT.cfg  Doxyfile  affichage.cpp  affichage.h  air_transistor.cpp  air_transistor.h  alarm.cpp  alarm.h  alarme.cpp  alarme.h  analyse-phase-sous-phase.ods  build.sh  buildDeployAndMonitor.sh  clavier.cpp  clavier.h  common.h  config.h  debug.h  display.cpp  display.h  keyboard.cpp  keyboard.h  out.csv  parameters.h  pression.cpp  pression.h  pressure_control.h  pressure_controller.cpp  pressure_controller.h  pressure_sensor.cpp  pressure_sensor.h  respi-debug-pid.cpp  respi-prod.cpp  respi-prod.cpp.STM32.stm32.Nucleo_64.elf  respi-prod.h  respi-qualification.cpp  respi-tests.cpp  respi_v0.cpp  simulation.h  (+1 more)
src/code/: Doxyfile
src/code/includes/: affichage.h  air_transistor.h  alarm.h  clavier.h  common.h  config.h  parameters.h  pressure_controller.h  pressure_valve.h  screen.h
src/code/output/: respirator.elf
src/code/qualification/: respirator.cpp
src/code/srcs/: affichage.cpp  air_transistor.cpp  alarm.cpp  clavier.cpp  keyboard.cpp  pression.cpp  pressure_controller.cpp  pressure_valve.cpp  qualification.cpp  respirator.cpp  screen.cpp
src/code/tests/: respirator.cpp
src/components-archive/airlock-valve/: README.md
src/components-archive/two-way-valve/: README.md
src/components/Blower/: README.md
src/components/air-transistor/: README.md
src/components/air-transistor-valve/: README.md
src/components/filter-box/: README.md
src/components/machine-filter-box/: README.md
src/components/oxygen-mixer/: README.md
src/components/pressure-valve/: README.md
src/components/venturi-valve/: README.md
src/electronics/: README.md
src/electronics/Prints/: Control Panel.sketch
src/electronics/ProtoB/: README.md
src/electronics/RTCRpi-I2C6/: RTCRpi.brd  RTCRpi.sch  eagle.epf
src/electronics/SFM3300 adapter/: eagle.epf  sfm3300 adapter.brd  sfm3300 adapter.sch
src/electronics/motherboard/: README.md
src/esc-stm-b-g431b-esc1/: ElectronicSpeedControl.stmcx  README.md
src/esc-stm-b-g431b-esc1/ElectronicSpeedControl/: .extSettings  .mxproject  ElectronicSpeedControl.ioc  ElectronicSpeedControl.ioc.wb  ElectronicSpeedControl.settings  ElectronicSpeedControl.wb_def  readme.txt
src/linux-display/: Cargo.toml
src/linux-display/src/: main.rs
src/mechanics/: README.md
src/mechanics/container/: README.md
src/respi_v0/: respi_v0.cpp  respi_v0.ino
src/software/: README.md
src/software/arduino/: affichage.cpp  affichage.h  build.sh  pression.cpp  pressure_controller.h  respi-prod.cpp
src/software/control/: Cargo.nix  Cargo.toml  README.md  default.nix
src/software/control/doc/designs/: Control UI.sketch
src/software/control/nix/: sources.json  wayland-client-0.12.13-force-native_lib.patch
src/software/control/scripts/: release_binaries.sh
src/software/control/src/: main.rs
src/software/control/src/chip/: mod.rs
src/software/control/src/config/: environment.rs  logger.rs  mod.rs
src/software/control/src/dirty_copy_paste/: mod.rs
src/software/control/src/display/: drawer.rs  events.rs  fonts.rs  loader.rs  macros.rs  mod.rs  renderer.rs  screen.rs  support.rs  widget.rs  widgets.rs  window.rs
src/software/control/src/physics/: mod.rs  pressure.rs  types.rs
src/software/control/src/serial/: handler.rs  mod.rs  poller.rs  warp10.rs
src/software/control/src/test_strategies/: mod.rs
src/software/control/warpscript/: readFromGlobalDatabase.mc2  synchronizeRemoteDatabase.mc2
src/software/firmware/test/: CMakeLists.txt  README.md  test_pression.cpp  test_pressure.cpp
src/software/telemetry/: .gitignore  Cargo.toml  README.md  run.sh
src/software/telemetry/records/: few_cycles  few_fake_cycles_with_errors  from_boot_with_fake_cycles_and_params_changes  short_with_errors
src/software/telemetry/scripts/: run.sh
src/software/telemetry/src/: alarm.rs  bin.rs  lib.rs  parsers.rs  structures.rs
stl/Air Transistor/: Air Transistor - Adapter Holder.stl  Air Transistor - Box.stl  Air Transistor - Exhaust Filter Cap.stl  Air Transistor - Exhaust Filter Main.stl  Air Transistor - Gear.stl  Air Transistor - Pendulum.stl  Air Transistor - Roof.stl
stl/Blower/: Blower - Duct.stl  Blower - Propeller.stl  Blower - Top.stl
(+1050 files in other folders)
