[package]
name = "linux-display"
version = "0.1.0"
authors = ["Quentin ADAM <quentin.adam@waxzce.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_piston = "0.69.0"
piston_window = "0.105.0"
plotters = {version = "^0.2.12", default_features = false, features = ["piston", "chrono", "line_series", "candlestick"]}
chrono = "0.4.11"
rand = "0.7.3"
log = "0.4.8"
simple_logger = "1.6.0"
piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"