[package]
name = "makair-control"
version = "0.0.1"
description = "Control UI for the MakAir SARS respirator."
readme = "README.md"
license-file = "LICENSE.txt"
edition = "2018"
homepage = "https://github.com/makers-for-life/makair"
repository = "https://github.com/makers-for-life/makair.git"
keywords = ["covid-19", "fusion-360", "cad", "covid", "coronavirus", "sars-cov-2", "nucleo-board", "covid-respirator", "makair-respirators", "medical", "ards"]
categories = ["gui", "hardware-support"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>", "Quentin Adam <quentin.adam@waxzce.org>"]

[[bin]]
name = "makair-control"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4"
clap = { version = "2.33", default-features = false }
lazy_static = "1.4"
conrod_piston = "0.69.0"
piston_window = "0.105.0"
plotters = {version = "^0.2.12", default_features = false, features = ["image_encoder", "chrono", "line_series", "palette", "ttf"]}
chrono = "0.4.11"
rand = "0.7.3"
piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"
image = "0.23.3"
glium = "0.24"
winit = "0.19"
conrod_glium = "0.69.0"
conrod_winit = "0.69.0"
conrod_core = "0.69.0"
telemetry = { path = "../telemetry", features = ["env_logger"], version = "0.1" }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
