[package]
name = "telemetry"
version = "1.0.0"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
nom = "5.1.1"
serial = "0.4.0"
env_logger = { version = "0.7.1", optional = true }

[lib]
name = "telemetry"
path = "src/lib.rs"

[features]
build-binary = ["env_logger"]

[[bin]]
name = "telemetry_debug"
path = "src/bin.rs"
required-features = ["build-binary"]
