[package]
name = "telemetry"
version = "1.0.0"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.0"
log = "0.4.8"
nom = "5.1.1"
serial = "0.4.0"
clap = { git = "https://github.com/clap-rs/clap/", rev = "99b1b768c25c1f317174e0b42e6740884c620f44", optional = true }
env_logger = { version = "0.7.1", optional = true }

[dev-dependencies]
proptest = "0.9.6"

[lib]
name = "telemetry"
path = "src/lib.rs"

[features]
build-binary = ["clap", "env_logger"]

[[bin]]
name = "telemetry_debug"
path = "src/bin.rs"
required-features = ["build-binary"]
